revise frontend and add flask server

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -56,15 +56,14 @@
 						<!-- placeholder for possible -->
 					</div>
 					<div class="row" id="submit">
-						<button type="button" class="btn btn-primary">Submit</button>
+						<button type="button" class="btn btn-primary">Distribute Roles</button>
 					</div>
 				</div>
 				<div class="col-sm">
-					<h2>Instructions</h2>
-					<div class="instruction-list">
-						<ul>
-							<li>Exit the stairs to the first floor of building 10</li>
-							<li>Walk east, and turn left at the end the hallway to enter building 16.</li>
+					<h2>Role Distribution</h2>
+					<div class="role-distribution-list">
+						<ul id="role_list">
+							<li>Put role instruction here.</li>
 						</ul>
 					</div>
 				</div>
