--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>MIT 2018 Travel Guide</title>
+		<title>Werewolf Facilitation Helper</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet", href="style.css">
+    <link rel="stylesheet", href="{{ url_for('static', filename='style.css') }}">
 	</head>
 	<body>
 		<nav class="navbar navbar-light bg-light">
@@ -56,7 +56,7 @@
 						<!-- placeholder for possible -->
 					</div>
 					<div class="row" id="submit">
-						<button type="button" class="btn btn-primary">Distribute Roles</button>
+						<button onclick="distribute()" type="button" class="btn btn-primary">Distribute Roles</button>
 					</div>
 				</div>
 				<div class="col-sm">
@@ -72,5 +72,6 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="{{ url_for('static', filename='main.js') }}"></script>
 	</body>
 </html>
