support knight selection

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -52,6 +52,12 @@
 						</div>
 						<input type="text" class="form-control" id="num_guard" placeholder="Enter 1 if want to have a guard" aria-label="guard" aria-describedby="basic-addon1">
 					</div>
+          <div class="input-group mb-3">
+						<div class="input-group-prepend">
+							<span class="input-group-text" id="basic-addon1">Knight(骑士)</span>
+						</div>
+						<input type="text" class="form-control" id="num_knight" placeholder="Enter 1 if want to have a knight" aria-label="knight" aria-describedby="basic-addon1">
+					</div>
 					<div id="inputErrorRemind">
 						<!-- placeholder for possible -->
 					</div>
