disable button upon successful role checking

--- a/app/templates/checker.html
+++ b/app/templates/checker.html
@@ -29,7 +29,7 @@
 						<input type="text" class="form-control" id="player_num" placeholder="Enter your player number." aria-label="player_num" aria-describedby="basic-addon1">
 					</div>
 					<div class="row" id="submit">
-						<button onclick="check()" type="button" class="btn btn-primary">Check Your Role</button>
+						<button onclick="check()" type="button" id="role-checker" class="btn btn-primary">Check Your Role</button>
 					</div>
 					<div id="inputErrorRemind">
 						<!-- placeholder for possible -->
