--- a/app/templates/moderate.html
+++ b/app/templates/moderate.html
@@ -16,6 +16,7 @@
 				<div class="col-sm">
           <h2>Roles</h2>
           <!-- Number of Players-->
+					<h4>Wolves/Villagers</h4>
 					<div class="input-group mb-3">
 						<div class="input-group-prepend">
 							<span class="input-group-text" id="basic-addon1">Number of werewolves(狼人)</span>
@@ -28,7 +29,45 @@
 						</div>
 						<input type="text" class="form-control" id="num_villagers" placeholder="Enter an integer that is at most 5." aria-label="villagers" aria-describedby="basic-addon1">
 					</div>
-					<div class="input-group mb-3">
+
+					<h4>Other Villagers</h4>
+					<div class="form-check">
+					  <input class="form-check-input" type="checkbox" value="" id="seer">
+					  <label class="form-check-label" for="seer">
+					    Seer(预言家/通灵师)
+					  </label>
+					</div>
+					<div class="form-check">
+					  <input class="form-check-input" type="checkbox" value="" id="witch">
+					  <label class="form-check-label" for="witch">
+					    Witch(女巫)
+					  </label>
+					</div>
+					<div class="form-check">
+					  <input class="form-check-input" type="checkbox" value="" id="hunter">
+					  <label class="form-check-label" for="hunter">
+					    Hunter(猎人)
+					  </label>
+					</div>
+					<div class="form-check">
+					  <input class="form-check-input" type="checkbox" value="" id="guard">
+					  <label class="form-check-label" for="guard">
+					    Guard(守卫)
+					  </label>
+					</div>
+					<div class="form-check">
+					  <input class="form-check-input" type="checkbox" value="" id="knight">
+					  <label class="form-check-label" for="knight">
+					    Knight(骑士)
+					  </label>
+					</div>
+					<div class="form-check">
+					  <input class="form-check-input" type="checkbox" value="" id="idiot">
+					  <label class="form-check-label" for="idiot">
+					    Idiot(白痴神)
+					  </label>
+					</div>
+					<!-- <div class="input-group mb-3">
 						<div class="input-group-prepend">
 							<span class="input-group-text" id="basic-addon1">Seer(预言家)</span>
 						</div>
@@ -57,7 +96,7 @@
 							<span class="input-group-text" id="basic-addon1">Knight(骑士)</span>
 						</div>
 						<input type="text" class="form-control" id="num_knight" placeholder="Enter 1 if want to have a knight" aria-label="knight" aria-describedby="basic-addon1">
-					</div>
+					</div> -->
 					<div id="inputErrorRemind">
 						<!-- placeholder for possible -->
 					</div>
