--- a/app/templates/moderate.html
+++ b/app/templates/moderate.html
@@ -67,36 +67,18 @@
 					    Idiot(白痴神)
 					  </label>
 					</div>
-					<!-- <div class="input-group mb-3">
-						<div class="input-group-prepend">
-							<span class="input-group-text" id="basic-addon1">Seer(预言家)</span>
-						</div>
-						<input type="text" class="form-control" id="num_seer" placeholder="Enter 1 if want to have a seer" aria-label="seer" aria-describedby="basic-addon1">
-					</div>
-          <div class="input-group mb-3">
-						<div class="input-group-prepend">
-							<span class="input-group-text" id="basic-addon1">Witch(女巫)</span>
-						</div>
-						<input type="text" class="form-control" id="num_witch" placeholder="Enter 1 if want to have a witch" aria-label="witch" aria-describedby="basic-addon1">
-					</div>
-          <div class="input-group mb-3">
-						<div class="input-group-prepend">
-							<span class="input-group-text" id="basic-addon1">Hunter(猎人)</span>
-						</div>
-						<input type="text" class="form-control" id="num_hunter" placeholder="Enter 1 if want to have a hunter" aria-label="hunter" aria-describedby="basic-addon1">
-					</div>
-          <div class="input-group mb-3">
-						<div class="input-group-prepend">
-							<span class="input-group-text" id="basic-addon1">Guard(守卫)</span>
-						</div>
-						<input type="text" class="form-control" id="num_guard" placeholder="Enter 1 if want to have a guard" aria-label="guard" aria-describedby="basic-addon1">
-					</div>
-          <div class="input-group mb-3">
-						<div class="input-group-prepend">
-							<span class="input-group-text" id="basic-addon1">Knight(骑士)</span>
-						</div>
-						<input type="text" class="form-control" id="num_knight" placeholder="Enter 1 if want to have a knight" aria-label="knight" aria-describedby="basic-addon1">
-					</div> -->
+					<h4>Special Wolves</h4>
+					<div class="form-group">
+				    <label for="exampleFormControlSelect1">Special Werewolves</label>
+				    <select class="form-control" id="special_wolves">
+							<option>None</option>
+				      <option>Nightmare Wolf(梦魇)</option>
+				      <option>Wolf King(狼王)</option>
+				      <option>Wolf Beauty(狼美人)</option>
+				      <option>Mechanical Wolf(机械狼人)</option>
+				      <option>Wolf Bishop/Hidden Wolf(种狼隐狼)</option>
+				    </select>
+				  </div>
 					<div id="inputErrorRemind">
 						<!-- placeholder for possible -->
 					</div>
