--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,6 +14,7 @@
 		<div class="container">
 			<button onclick="window.location='/moderate'" type="button" class="btn btn-primary">Moderate a Game</button>
       <button onclick="window.location='/check'" type="button" class="btn btn-primary">Check Your Roles</button>
+			<button onclick="window.location='/vote'" type="button" class="btn btn-primary">Cast a Vote</button>
 		</div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
