disable buttons for some time

--- a/app/templates/vote.html
+++ b/app/templates/vote.html
@@ -47,7 +47,7 @@
 						<input type="text" class="form-control" id="vote_for" placeholder="在这里输入你要投给的玩家。弃票填0，或不填。" aria-label="vote_for" aria-describedby="basic-addon1">
 					</div>
 					<div class="row" id="submit">
-						<button onclick="vote()" type="button" id="role-checker" class="btn btn-primary">Cast My Vote</button>
+						<button onclick="vote()" type="button" id="submit-vote" class="btn btn-primary">Cast My Vote</button>
 					</div>
 					<div id="inputErrorRemind">
 						<!-- placeholder for possible -->
@@ -79,7 +79,7 @@
   					</div>
             <div id="vote-output">
               <ul id="vote-list">
-                
+
               </ul>
             </div>
             <div id="inputErrorRemind2">
