dual werewolf initial implementaiton

--- a/app/templates/moderate.html
+++ b/app/templates/moderate.html
@@ -67,6 +67,18 @@
 					    Idiot(白痴神)
 					  </label>
 					</div>
+					<div class="form-check">
+					  <input class="form-check-input" type="checkbox" value="" id="gravekeeper">
+					  <label class="form-check-label" for="gravekeeper">
+					    Gravekeeper(守墓人)
+					  </label>
+					</div>
+					<div class="form-check">
+						<input class="form-check-input" type="checkbox" value="" id="copier">
+						<label class="form-check-label" for="copier">
+							Copier(复刻)
+						</label>
+					</div>
 					<h4>Special Wolves</h4>
 					<div class="form-group">
 				    <label for="exampleFormControlSelect1">Special Werewolves</label>
