dual game creation/role check

--- a/app/templates/moderate.html
+++ b/app/templates/moderate.html
@@ -97,6 +97,16 @@
 					<div class="row" id="submit">
 						<button onclick="distribute()" type="button" class="btn btn-primary">Distribute Roles</button>
 					</div>
+					<h2>Dual Werewolf</h2>
+					<div class="input-group mb-3">
+						<div class="input-group-prepend">
+							<span class="input-group-text" id="basic-addon1">Number of Players</span>
+						</div>
+						<input type="text" class="form-control" id="num_players" placeholder="Support 6-8 players." aria-label="num_players" aria-describedby="basic-addon1">
+					</div>
+					<div class="row" id="submit">
+						<button onclick="requestDualRoles()" type="button" class="btn btn-primary">Distribute Roles(Dual Game)</button>
+					</div>
 				</div>
 				<div class="col-sm">
 					<h2>Role Distribution</h2>
