--- a/app/templates/moderate.html
+++ b/app/templates/moderate.html
@@ -74,6 +74,12 @@
 					  </label>
 					</div>
 					<div class="form-check">
+					  <input class="form-check-input" type="checkbox" value="" id="snailman">
+					  <label class="form-check-label" for="snailman">
+					    Snailman(蜗牛)
+					  </label>
+					</div>
+					<div class="form-check">
 						<input class="form-check-input" type="checkbox" value="" id="copier">
 						<label class="form-check-label" for="copier">
 							Copier(复刻)
